정온 로그인 요청 confirm 한번만 띄우게 수정

--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -36,7 +36,7 @@
                     <img class="mainposter">
                     <div class="detail2Wrap">
                         <div class="voteAverage">
-                            <div class="rating">
+                            <div class="rating" id="ratingWrapDiv">
                                 <label class="rating__label rating__label--half" for="starhalf">
                                     <input type="radio" id="starhalf" class="rating__input" name="rating" value="0.5">
                                     <span class="star-icon"></span>
