디테일 페이지 오류수정 상영시간 개봉일 추가 디자인 작업중 제작사 넣을까 고민중

--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -16,15 +16,19 @@
                             <li class="detailTitleli">
                                 <h1 class="detailTitle"></h1>
                             </li>
+                            <li class="detailReleaseDateLi">
+                                <p class="detailReleaseDate"></p>
+                            </li>
+                            <li class="detailRuntimeLi">
+                                <p class="detailRuntime"></p>
+                            </li>
                             <li class="detailcateLi">
                                 <div class="detailcate"></div>
                             </li>
                         </ul>
                     </div>
                     <div class="detailLike">
-                        <div id="detailWish">
-
-                        </div>
+                        <div id="detailWish"></div>
                         <div id="detailCollection">
                            컬렉션 추가
                         </div>
